--- a/j8a.yml
+++ b/j8a.yml
@@ -8,7 +8,7 @@ connection:
     mode: HTTP
   upstream:
     socketTimeoutSeconds: 3
-    readTimeoutSeconds: 3
+    readTimeoutSeconds: 30
     idleTimeoutSeconds: 10
     maxAttempts: 4
     poolSize: 8
@@ -20,7 +20,7 @@ policies:
       weight: 0.2
 routes:
   - path: "/about"
-    resource: aboutJabba
+    resource: aboutj8a
   - path: "/mse6/some"
     resource: mse61
   - path: "/mse6/"
