--- a/integration/j8a3.yml
+++ b/integration/j8a3.yml
@@ -97,7 +97,7 @@ connection:
     idleTimeoutSeconds: 10
     maxAttempts: 4
     poolSize: 8
-    tlsInsecureSkipVerify: y
+    tlsInsecureSkipVerify: yes
 policies:
   ab:
     - label: green
@@ -152,7 +152,14 @@ routes:
     resource: badremote
   - path: "/badlocal"
     resource: badlocal
+  - path: /badssl
+    resource: badssl
 resources:
+  badssl:
+    - url:
+        scheme: https
+        host: localhost
+        port: 60101
   badip:
     - url:
         scheme: http
