--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.14
+    - name: Set up Go 1.15
       uses: actions/setup-go@v1
       with:
-        go-version: 1.14
+        go-version: 1.15
       id: go
 
     - name: Check out code into the Go module directory
@@ -26,7 +26,7 @@ jobs:
       run: go build 
     
     - name: Test
-      run: go test -v -cover
+      run: go test -v -bench -cover
       
     - name: Install
       run: go install github.com/simonmittag/j8a/cmd/j8a
