--- a/j8a.yml
+++ b/j8a.yml
@@ -6,7 +6,7 @@ connection:
     idleTimeoutSeconds: 30
     port: 8080
     mode: HTTP
-    maxBodyBytes: 20487152
+    maxBodyBytes: 65535
   upstream:
     socketTimeoutSeconds: 3
     readTimeoutSeconds: 30
