--- a/integration/j8a1.yml
+++ b/integration/j8a1.yml
@@ -141,6 +141,9 @@ jwt:
   jwtjwksbadrotate:
     alg: RS256
     jwksUrl: http://localhost:60083/mse6/jwksbadrotate
+  jwtjwksbadrotate2:
+    alg: RS256
+    jwksUrl: http://localhost:60084/mse6/jwksbadrotate
 
 routes:
   - path: "/about"
@@ -151,6 +154,10 @@ routes:
     transform: /mse6
     resource: mse6
     jwt: jwtjwksbadrotate
+  - path: /mse6jwtjwksbadrotate2
+    transform: /mse6
+    resource: mse6
+    jwt: jwtjwksbadrotate2
   - path: /mse6jwt
     transform: /mse6
     resource: mse6
